--- a/jalendar/build.gradle
+++ b/jalendar/build.gradle
@@ -21,6 +21,7 @@ android {
         }
     }
     compileOptions {
+        coreLibraryDesugaringEnabled = true
         sourceCompatibility JavaVersion.VERSION_1_8
         targetCompatibility JavaVersion.VERSION_1_8
     }
@@ -42,8 +43,11 @@ dependencies {
     implementation "androidx.compose.ui:ui:$compose_version"
     implementation "androidx.compose.material:material:$compose_version"
     implementation "androidx.compose.ui:ui-tooling-preview:$compose_version"
+    coreLibraryDesugaring("com.android.tools:desugar_jdk_libs:1.1.5")
     // 图标扩展
     implementation "androidx.compose.material:material-icons-extended:$compose_version"
+
+    implementation "com.google.accompanist:accompanist-pager:0.24.11-rc"
 
 //    implementation 'androidx.appcompat:appcompat:1.3.0'
 //    implementation 'com.google.android.material:material:1.4.0'
